--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="C:\Users\anish\Desktop\HTML-CSS\styles.css" />
+        <link rel="stylesheet" href="styles.css" />
         <title>My Webpage</title>
     </head>
     <body>
