Changed the backgroud image as well as whole layout

--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css" />
-        <title>My Webpage</title>
+        <link rel="stylesheet" href="styles.css">
+        <title>Home</title>
     </head>
     <body>
-        <div class="main">
-        <img class="main-image" src="Picture.png">
+        <div class="top">A Preview of My Works</div>
+        <div class="mid">
+            <p>Some works I did are linked down below: </p>
+            <p>
+                <img class="mid_img" src="images/BMS.png"><br>
+                <a href="https://github.com/anishkn04/bank_management_system" target="_blank">
+                    <button class="mid_btn">Take me to this one!</button>
+                </a> 
+                <br>
+                <br>
+                <img class="mid_img" src="images/website.jpeg"><br>
+                <a href="https://github.com/anishkn04/anishkn04.github.io" target="_blank">
+                    <button class="mid_btn">Take me to this one!</button>
+                </a>
+            </p>
         </div>
-        <h1>Hello, My name is Anish K. Neupane</h1>
-        <h2>Some facts about me: </h2>
-        <ul>
-            <li>I am 21 years old.</li>
-            <li>I am studying BE SE.</li>
-            <li>I am living in KTM.</li>
-        </ul>
-
-        <p>You can contact me through <a href="https://www.linkedin.com/in/anish-neupane-203b40277/">LinkedIn</a></p>
-
-        <input type="text" placeholder="Subscribe for newsletter">
-        <p><button>Subscribe</button></p>
+        <div class="bottom">
+            <p>
+                You can contact me through: <a href="https://www.linkedin.com/in/anish-kumar-neupane-203b40277" target="_blank"><button><img class="cont_btn" src="images/linkedin.png"></button></a> 
+                <a href="https://github.com/anishkn04" target="_blank"><button><img class="cont_btn" src="images/github.png"></button></a>
+            </p>
+        </div>
     </body>
 </html>
