Some design changes

--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
                 </a>
             </p>
         </div>
-        <div class="bottom">
-            <p>
-                You can contact me through: <a href="https://www.linkedin.com/in/anish-kumar-neupane-203b40277" target="_blank"><button><img class="cont_btn" src="images/linkedin.png"></button></a> 
-                <a href="https://github.com/anishkn04" target="_blank"><button><img class="cont_btn" src="images/github.png"></button></a>
-            </p>
-        </div>
+        <footer>
+                You can contact me through: <br><a href="https://www.linkedin.com/in/anish-kumar-neupane-203b40277" target="_blank"><img src="images/linkedin_logo.png" class="li_image"></a> 
+                <a href="https://github.com/anishkn04" target="_blank"><img src="images/github_icon.png" class="gh_image"><img src="images/github_name.png" class="gh_image"></a>
+        </footer>
     </body>
 </html>
