--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </a>
             </p>
         </div>
-        <footer>
+        <footer class="footer">
                 You can contact me through: <br><a href="https://www.linkedin.com/in/anish-kumar-neupane-203b40277" target="_blank"><img src="images/linkedin_logo.png" class="li_image"></a> 
                 <a href="https://github.com/anishkn04" target="_blank"><img src="images/github_icon.png" class="gh_image"><img src="images/github_name.png" class="gh_image"></a>
         </footer>
