--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     </head>
     <body>
         <div class="top">A Preview of My Works</div>
+        <div class="nav-bar">Menu
+            <ul class="nav-options">
+                <li class="nav-options-items"><a href="https://anishkn.com.np/" class="nav-options-anchors">Home</a></li>
+                <li class="nav-options-items"><a href="https://www.linkedin.com/in/anish-kumar-neupane-203b40277" target="_blank" class="nav-options-anchors">Who are you?</a></li>
+                <li class="nav-options-items"><a href="#" class="nav-options-anchors">Placeholder</a></li>
+            </ul>
+        </div>
         <div class="mid">
             <p>Some works I did are linked down below: </p>
             <p>
