Forgot what I changed

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <p>
                 <img class="mid_img" src="images/BMS.png"><br>
                 <a href="https://github.com/anishkn04/bank_management_system" target="_blank">
-                    <button class="mid_btn">Take me to this one!</button>
+                    <button class="mid_btn">Bank Management System</button>
                 </a> 
                 <br>
                 <br>
                 <img class="mid_img" src="images/website.jpeg"><br>
                 <a href="https://github.com/anishkn04/anishkn04.github.io" target="_blank">
-                    <button class="mid_btn">Take me to this one!</button>
+                    <button class="mid_btn">My Portfolio</button>
                 </a>
             </p>
         </div>
