Added content to the 'My Works' section

--- a/index.html
+++ b/index.html
@@ -57,9 +57,39 @@
             <div id="about-me"></div>
             <div id="my-works">
                 <div class="collage">
-                    <div class="collage-item"><img src="" alt="" class="collage-img"><span class="collage-desc"></span></div>
-                    <div class="collage-item"><img src="" alt="" class="collage-img"><span class="collage-desc"></span></div>
-                    <div class="collage-item"><img src="" alt="" class="collage-img"><span class="collage-desc"></span></div>
+                    <div class="collage-item">
+                        <img src="images/bankMS.png" alt="Bank Management System" class="collage-img">
+                        <a href="https://github.com/anishkn04/bank_management_system" target="_blank" class="collage-desc">
+                            <span class="collage-title">
+                                Bank Management System
+                            </span>
+                                <span class="collage-detail">
+                                    This is project, Bank-MS. Pretty bad to be honest. But one day I'll improve it
+                                </span>
+                        </a>
+                    </div>
+                    <div class="collage-item">
+                        <img src="images/labMS.png" alt="Lab Report Management System" class="collage-img">
+                        <a href="https://github.com/anishkn04/LabReport" target="_blank" class="collage-desc">
+                            <span class="collage-title">
+                                Lab Report Management System
+                            </span>
+                                <span class="collage-detail">
+                                    This is Lab MS (IDK why MS only, but whatever). This is pretty good as it was my first experience (on my own Project) with WebDev. I know it has a lot of shortcomings, but this is one project that I'll definitely complete.
+                            </span>
+                        </a>
+                    </div>
+                    <div class="collage-item">
+                        <img src="https://raw.githubusercontent.com/gsapkota69/movie-booking/main/images/booking.jpg" alt="Movie Booking" class="collage-img">
+                        <a href="https://github.com/anishkn04/movie-booking" target="_blank" class="collage-desc">
+                            <span class="collage-title">
+                                Contributed Project
+                            </span>
+                            <span class="collage-detail">
+                                Did a lot of work for this too. This was the real first experience of WebDev, learned a lot from it.
+                            </span>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div id="contact-me"></div>
