Forgot to add images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div id="my-works">
                 <div class="collage">
                     <div class="collage-item">
-                        <img src="images/bankMS.png" alt="Bank Management System" class="collage-img">
+                        <img src="./images/bankMS.png" alt="Bank Management System" class="collage-img">
                         <a href="https://github.com/anishkn04/bank_management_system" target="_blank" class="collage-desc">
                             <span class="collage-title">
                                 Bank Management System
@@ -69,7 +69,7 @@
                         </a>
                     </div>
                     <div class="collage-item">
-                        <img src="images/labMS.png" alt="Lab Report Management System" class="collage-img">
+                        <img src="./images/labMS.png" alt="Lab Report Management System" class="collage-img">
                         <a href="https://github.com/anishkn04/LabReport" target="_blank" class="collage-desc">
                             <span class="collage-title">
                                 Lab Report Management System
