Changed the layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
     <title>Anish K. Neupane</title>
 </head>
+
 <body>
     <div id="root">
         <nav>
@@ -17,24 +19,48 @@
             </ul>
         </nav>
         <main>
-            <div class="container">
-                <span class="container-title">Intro</span>
-                <div class="container-content">This is my Website Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores nulla commodi consectetur a provident iste beatae, quibusdam laboriosam, vel at recusandae sapiente voluptate! Architecto explicabo nulla libero odio ex neque! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, molestiae! Porro, enim voluptatum nisi totam laborum tempore quod soluta, dicta non quia facere doloremque modi. lorem50</div>
+            <div class="container" id="intro-container">
+                <span class="container-title">Welcome</span>
+                <div class="container-content">This is my Website.
+                </div>
             </div>
-            <div class="container">
+            <div class="container" id="about-container">
                 <span class="container-title">About Me</span>
-                <div class="container-content">I am Anish</div>
+                <div class="container-content">I am Anish </div>
             </div>
-            <div class="container">
+            <div class="container" id="project-container">
                 <span class="container-title">My Projects</span>
-                <div class="container-content">There are some</div>
+                <div class="container-content">
+                    <div class="project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum non natus nam
+                        autem aliquid suscipit, molestiae, deserunt repellendus officia sint expedita sequi voluptatibus
+                        explicabo voluptatem eum eaque tenetur, blanditiis voluptate?</div>
+                    <div class="project">Ullam perferendis harum possimus excepturi ipsum? Quam molestiae quibusdam
+                        illum ratione quisquam quos, id velit aut cumque quidem optio inventore ea magni minima, saepe,
+                        fugiat iusto maiores maxime ipsam voluptate?</div>
+                    <div class="project">Deleniti perspiciatis iste voluptates at maiores totam, eaque tempore commodi
+                        iusto temporibus ducimus expedita sunt omnis culpa, pariatur tempora excepturi? Sint animi optio
+                        repellat mollitia ipsam voluptatibus ab consequatur cupiditate!</div>
+                    <div class="project">Voluptates perferendis consectetur rem? Quo maiores commodi, provident
+                        voluptatum fugiat rerum, doloremque magni iste voluptatem quaerat exercitationem recusandae
+                        nihil accusantium expedita, architecto quod qui saepe reiciendis ad deleniti dolor? Quasi.</div>
+                    <div class="project">Placeat consectetur dicta tempora officiis quaerat rem odit quasi eius sit
+                        aliquid, iste pariatur. Temporibus odio cupiditate laborum, assumenda nemo quam accusantium
+                        repellat quaerat velit quo, voluptatibus delectus asperiores veniam?</div>
+                    <div class="project">Architecto minus soluta eaque quam maxime eveniet doloremque quidem hic
+                        distinctio, voluptatum nisi nam quos blanditiis expedita numquam cum doloribus, quaerat,
+                        suscipit quibusdam! Nobis, aspernatur culpa. Voluptate laudantium repudiandae explicabo.</div>
+                    <div class="project">Et inventore debitis consectetur! Ipsam voluptates minus fugiat sunt, nesciunt
+                        nostrum quam possimus modi. Rerum officiis harum debitis vitae eaque iure quas, exercitationem
+                        impedit magnam cumque deserunt sequi et. Quo!</div>
+                </div>
             </div>
-            <div class="container">
+            <div class="container" id="contact-container">
                 <span class="container-title">Contact Me</span>
                 <div class="container-content">I will add soon</div>
             </div>
         </main>
-        <footer></footer>
+        <!-- <footer></footer> -->
     </div>
 </body>
+
 </html>
