--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Anish K. Neupane</title>
 </head>
 
-<body>
+<body onload="window.location.href = './um.html'">
     <div id="root">
         <nav>
             <ul id="nav-list">
