--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
+    <script>
+        window.location.href = './um.html';
+    </script>
     <title>Anish K. Neupane</title>
 </head>
 
-<body onload="window.location.href = './um.html'">
+<body>
     <div id="root">
         <nav>
             <ul id="nav-list">
