Update image link

--- a/um.html
+++ b/um.html
@@ -45,7 +45,7 @@
         <h1>This site is under maintainance.</h1>
     </div>
     <div>
-        <img src="./images/underConstruction.png" alt="Site under construction image">
+        <img src="https://static.wixstatic.com/media/a14d1e_5bee27cbf6524b149339d6b3ec506bce~mv2.png/v1/fill/w_724,h_570,al_c,q_90,enc_auto/clipart3660514.png" alt="Site under construction image">
     </div>
 
 </body>
