--- a/index.html
+++ b/index.html
@@ -1,69 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head >
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <script>
-        window.location.href = './um.html';
-    </script>
     <title>Anish K. Neupane</title>
 </head>
 
 <body>
     <div id="root">
-        <nav>
-            <ul id="nav-list">
-                <li class="nav-item"><a class="nav-item-anchor" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-item-anchor" href="#">About Me</a></li>
-                <li class="nav-item"><a class="nav-item-anchor" href="#">My Projects</a></li>
-                <li class="nav-item"><a class="nav-item-anchor" href="#">Contact Me</a></li>
-            </ul>
-        </nav>
-        <main>
-            <div class="container" id="intro-container">
-                <span class="container-title">Welcome</span>
-                <div class="container-content">This is my Website.
-                </div>
-            </div>
-            <div class="container" id="about-container">
-                <span class="container-title">About Me</span>
-                <div class="container-content">I am Anish </div>
-            </div>
-            <div class="container" id="project-container">
-                <span class="container-title">My Projects</span>
-                <div class="container-content">
-                    <div class="project">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum non natus nam
-                        autem aliquid suscipit, molestiae, deserunt repellendus officia sint expedita sequi voluptatibus
-                        explicabo voluptatem eum eaque tenetur, blanditiis voluptate?</div>
-                    <div class="project">Ullam perferendis harum possimus excepturi ipsum? Quam molestiae quibusdam
-                        illum ratione quisquam quos, id velit aut cumque quidem optio inventore ea magni minima, saepe,
-                        fugiat iusto maiores maxime ipsam voluptate?</div>
-                    <div class="project">Deleniti perspiciatis iste voluptates at maiores totam, eaque tempore commodi
-                        iusto temporibus ducimus expedita sunt omnis culpa, pariatur tempora excepturi? Sint animi optio
-                        repellat mollitia ipsam voluptatibus ab consequatur cupiditate!</div>
-                    <div class="project">Voluptates perferendis consectetur rem? Quo maiores commodi, provident
-                        voluptatum fugiat rerum, doloremque magni iste voluptatem quaerat exercitationem recusandae
-                        nihil accusantium expedita, architecto quod qui saepe reiciendis ad deleniti dolor? Quasi.</div>
-                    <div class="project">Placeat consectetur dicta tempora officiis quaerat rem odit quasi eius sit
-                        aliquid, iste pariatur. Temporibus odio cupiditate laborum, assumenda nemo quam accusantium
-                        repellat quaerat velit quo, voluptatibus delectus asperiores veniam?</div>
-                    <div class="project">Architecto minus soluta eaque quam maxime eveniet doloremque quidem hic
-                        distinctio, voluptatum nisi nam quos blanditiis expedita numquam cum doloribus, quaerat,
-                        suscipit quibusdam! Nobis, aspernatur culpa. Voluptate laudantium repudiandae explicabo.</div>
-                    <div class="project">Et inventore debitis consectetur! Ipsam voluptates minus fugiat sunt, nesciunt
-                        nostrum quam possimus modi. Rerum officiis harum debitis vitae eaque iure quas, exercitationem
-                        impedit magnam cumque deserunt sequi et. Quo!</div>
-                </div>
-            </div>
-            <div class="container" id="contact-container">
-                <span class="container-title">Contact Me</span>
-                <div class="container-content">I will add soon</div>
-            </div>
-        </main>
-        <!-- <footer></footer> -->
+        <h1 style="width: 100vw; text-align: center">Website is currently under construction.</h1>
+        <img height="200px" width="auto" src="./images/underConstruction.svg">
+        <div style="width: 100vw; text-align: center">Estimated wait time: <span id="waitTime"></span></div>
     </div>
+    <script>
+        const waitSpan = document.querySelector("#waitTime");
+        const finalDate = new Date("2024-05-30")
+        setInterval(() => {
+            const currDate = new Date();
+            let estTimeInMs = finalDate - currDate;
+            const estDays = Math.floor(estTimeInMs / 86400000);
+            estTimeInMs -= estDays * 86400000;
+            const estHours = Math.floor((estTimeInMs) / 3600000)
+            estTimeInMs -= estHours * 3600000;
+            const estMinutes = Math.floor(estTimeInMs / 60000)
+            estTimeInMs -= estMinutes * 60000;
+            const estSeconds = Math.floor(estTimeInMs / 1000)
+            waitSpan.innerText = `${estDays} days, ${estHours} hours, ${estMinutes} minutes and ${estSeconds} seconds.`
+        }, 1000)
+    </script>
 </body>
 
 </html>
