--- a/drive/index.html
+++ b/drive/index.html
@@ -32,6 +32,7 @@
         }
         button:hover{
             cursor: pointer;
+            box-shadow: 2px 2px 8px black;
         }
     </style>
 </head>
@@ -43,6 +44,6 @@
         }
     </script>
     <div><button onclick="redirect()">Redirect!</button></div>
-    <div>Had to remove redirection with DNS because apparantly Google Search Console doesn't let you index sites with redirection.</div>
+    <div>Had to remove redirection with cloudflare because apparently Google Search Console "flags" sites with redirection to sites like Drive.</div>
 </body>
 </html>
