--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <main class="md:pl-36 h-fit text-black overflow-y-auto">
             <section class="pt-12 flex justify-center items-center h-screen bg-slate-50" id="about-me">
                 <div data-aos="fade-right" data-aos-duration="800"
-                    class="h-full overflow-scroll w-full p-2 gap-4 text-sm md:p-4 md:text-base lg:p-24 xl:p-32 lg:text-lg xl:text-xl shadow-md">
+                    class="h-full overflow-y-auto w-full p-2 gap-4 text-sm md:p-4 md:text-base lg:p-24 xl:p-32 lg:text-lg xl:text-xl shadow-md">
                     <p>I'm Anish Kumar Neupane, a software engineering student with a passion for creating innovative
                         solutions 🚀. As I pursue my Bachelor's degree, I'm constantly seeking oppurtunities to improve
                         my skills and stay up-to-date with the latest technologies 💻.</p>
